infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true' #for regex
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev # made up domain that is going to work on my local machine only
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv # the request for this route are sent to my service
                port:
                  number: 3000
